{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 93,
  "lineage": "5e7970df-a6d0-6ab7-874e-1b18b313689c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b942834821ffac3b",
            "arn": "arn:aws:ec2:us-east-1:654654184825:elastic-ip/eipalloc-0b942834821ffac3b",
            "association_id": "eipassoc-054730e2871927cd8",
            "domain": "vpc",
            "id": "eipalloc-0b942834821ffac3b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08660fc36848b9956",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_ip": "10.0.1.100",
            "public_dns": "ec2-54-87-106-255.compute-1.amazonaws.com",
            "public_ip": "54.87.106.255",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-eip-nat-0",
              "Project": "microservices"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-eip-nat-0",
              "Project": "microservices"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0312f926402c7864d",
            "arn": "arn:aws:ec2:us-east-1:654654184825:elastic-ip/eipalloc-0312f926402c7864d",
            "association_id": "eipassoc-0afe48f4502a30762",
            "domain": "vpc",
            "id": "eipalloc-0312f926402c7864d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ac080f21a62651d2",
            "private_dns": "ip-10-0-2-11.ec2.internal",
            "private_ip": "10.0.2.11",
            "public_dns": "ec2-34-234-145-71.compute-1.amazonaws.com",
            "public_ip": "34.234.145.71",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-eip-nat-1",
              "Project": "microservices"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-eip-nat-1",
              "Project": "microservices"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654184825:internet-gateway/igw-0c20ca687793b0b5e",
            "id": "igw-0c20ca687793b0b5e",
            "owner_id": "654654184825",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-igw",
              "Project": "microservices"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-igw",
              "Project": "microservices"
            },
            "vpc_id": "vpc-007e49668ab1deebe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b942834821ffac3b",
            "association_id": "eipassoc-054730e2871927cd8",
            "connectivity_type": "public",
            "id": "nat-0998fb5bfb99d5e71",
            "network_interface_id": "eni-08660fc36848b9956",
            "private_ip": "10.0.1.100",
            "public_ip": "54.87.106.255",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d635fbc1e41278e8",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-nat-0",
              "Project": "microservices"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-nat-0",
              "Project": "microservices"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0312f926402c7864d",
            "association_id": "eipassoc-0afe48f4502a30762",
            "connectivity_type": "public",
            "id": "nat-032fb0f63cbc64470",
            "network_interface_id": "eni-0ac080f21a62651d2",
            "private_ip": "10.0.2.11",
            "public_ip": "34.234.145.71",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0abd92e6b81d4310f",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-nat-1",
              "Project": "microservices"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-nat-1",
              "Project": "microservices"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654184825:route-table/rtb-04af8392128d2591c",
            "id": "rtb-04af8392128d2591c",
            "owner_id": "654654184825",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0998fb5bfb99d5e71",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-private-rt-0",
              "Project": "microservices"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-private-rt-0",
              "Project": "microservices"
            },
            "timeouts": null,
            "vpc_id": "vpc-007e49668ab1deebe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654184825:route-table/rtb-0668499b13ee47de9",
            "id": "rtb-0668499b13ee47de9",
            "owner_id": "654654184825",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-032fb0f63cbc64470",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-private-rt-1",
              "Project": "microservices"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-private-rt-1",
              "Project": "microservices"
            },
            "timeouts": null,
            "vpc_id": "vpc-007e49668ab1deebe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654184825:route-table/rtb-068de8f1c1ca72ac6",
            "id": "rtb-068de8f1c1ca72ac6",
            "owner_id": "654654184825",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c20ca687793b0b5e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-public-rt",
              "Project": "microservices"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-public-rt",
              "Project": "microservices"
            },
            "timeouts": null,
            "vpc_id": "vpc-007e49668ab1deebe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f64957ae43439535",
            "route_table_id": "rtb-04af8392128d2591c",
            "subnet_id": "subnet-0909dbd181eaee63c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af4a330aa110313e",
            "route_table_id": "rtb-0668499b13ee47de9",
            "subnet_id": "subnet-0a08ca0cca115652a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036c5189c9fd38630",
            "route_table_id": "rtb-068de8f1c1ca72ac6",
            "subnet_id": "subnet-0d635fbc1e41278e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5ea8858ca5943a5",
            "route_table_id": "rtb-068de8f1c1ca72ac6",
            "subnet_id": "subnet-0abd92e6b81d4310f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654184825:subnet/subnet-0909dbd181eaee63c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0909dbd181eaee63c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654184825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-private-0",
              "Project": "microservices",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-private-0",
              "Project": "microservices",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-007e49668ab1deebe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654184825:subnet/subnet-0a08ca0cca115652a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a08ca0cca115652a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654184825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-private-1",
              "Project": "microservices",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-private-1",
              "Project": "microservices",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-007e49668ab1deebe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654184825:subnet/subnet-0d635fbc1e41278e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d635fbc1e41278e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654184825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-public-0",
              "Project": "microservices",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-public-0",
              "Project": "microservices",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-007e49668ab1deebe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654184825:subnet/subnet-0abd92e6b81d4310f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abd92e6b81d4310f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654184825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-public-1",
              "Project": "microservices",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-public-1",
              "Project": "microservices",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-007e49668ab1deebe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654184825:vpc/vpc-007e49668ab1deebe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069df57e2759fb85a",
            "default_route_table_id": "rtb-003f3e6947f52798c",
            "default_security_group_id": "sg-09a4e9e4b306400a1",
            "dhcp_options_id": "dopt-0223d770be1cfb887",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007e49668ab1deebe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003f3e6947f52798c",
            "owner_id": "654654184825",
            "tags": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-vpc",
              "Project": "microservices"
            },
            "tags_all": {
              "Environment": "lab",
              "ManagedBy": "Terraform",
              "Name": "microservices-vpc",
              "Project": "microservices"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}